--- a/ЛР3.md
+++ b/ЛР3.md
@@ -1,2 +1,4 @@
 <h1 align="left"> Cловник базових англійських термінів</h1>
-dsajdadajda
+Shell - An interpreter that processes entered commands and passes them to the operating system for execution.
+Command - An instruction to perform a specific action within the operating system.
+Argument - Additional information provided to a command for processing.
