--- a/ЛР3.md
+++ b/ЛР3.md
@@ -1,5 +1,16 @@
 <h1 align="left"> Cловник базових англійських термінів</h1>
-Shell - An interpreter that processes entered commands and passes them to the operating system for execution.
+**Command Line Interface (CLI)** - An interface that allows users to interact with the operating system through text commands.
 
-Command - An instruction to perform a specific action within the operating system.
-Argument - Additional information provided to a command for processing.
+**Shell** - An interpreter that processes entered commands and passes them to the operating system for execution.
+
+**Command** - An instruction to perform a specific action within the operating system.
+
+**Argument** - Additional information provided to a command for processing.
+
+**Option (parameter)** - A modifier that changes the behavior of a command.
+
+**Prompt** - The command-line prompt that displays user, system, and current directory information.
+
+**Alias** - A shortcut or nickname for a command.
+
+**Variable** - A storage unit for values used in Bash.
