--- a/ЛР3.md
+++ b/ЛР3.md
@@ -1,4 +1,5 @@
-<h1 align="left"> Cловник базових англійських термінів</h1>
+#Словник 
+
 **Command Line Interface (CLI)** - An interface that allows users to interact with the operating system through text commands.
 
 **Shell** - An interpreter that processes entered commands and passes them to the operating system for execution.
