--- a/ЛР3.md
+++ b/ЛР3.md
@@ -1,4 +1,5 @@
 # Словник
+## назви
 
 **Command Line Interface (CLI)** - An interface that allows users to interact with the operating system through text commands.
 
