--- a/ЛР3.md
+++ b/ЛР3.md
@@ -1,5 +1,4 @@
 # Словник
-## назви
 
 **Command Line Interface (CLI)** - An interface that allows users to interact with the operating system through text commands.
 
@@ -7,12 +6,4 @@
 
 **Command** - An instruction to perform a specific action within the operating system.
 
-**Argument** - Additional information provided to a command for processing.
-
-**Option (parameter)** - A modifier that changes the behavior of a command.
-
-**Prompt** - The command-line prompt that displays user, system, and current directory information.
-
-**Alias** - A shortcut or nickname for a command.
-
-**Variable** - A storage unit for values used in Bash.
+**CPU** - A central processing unit (CPU), also called a central processor, main processor, or just processor, is the primary processor in a given computer.
