--- a/ЛР3.md
+++ b/ЛР3.md
@@ -7,3 +7,5 @@
 **Command** - An instruction to perform a specific action within the operating system.
 
 **CPU** - A central processing unit (CPU), also called a central processor, main processor, or just processor, is the primary processor in a given computer.
+
+# Відповіді на контрольні запитання
