--- a/ЛР3.md
+++ b/ЛР3.md
@@ -8,4 +8,12 @@
 
 **CPU** - A central processing unit (CPU), also called a central processor, main processor, or just processor, is the primary processor in a given computer.
 
+**Prompt** – The command-line prompt that displays information about the user and system.
+
+**Alias** – A shortcut for a command, allowing long commands to be abbreviated.
+
+**External command** – a command stored in a file and executed by the shell.
+
+**Function** – a set of commands that can be executed as a single command.
+
 # Відповіді на контрольні запитання
