--- a/ЛР3.md
+++ b/ЛР3.md
@@ -12,8 +12,8 @@
 
 **Alias** – A shortcut for a command, allowing long commands to be abbreviated.
 
-**External command** – a command stored in a file and executed by the shell.
+**External command** – A command stored in a file and executed by the shell.
 
-**Function** – a set of commands that can be executed as a single command.
+**Function** – A set of commands that can be executed as a single command.
 
 # Відповіді на контрольні запитання
