--- a/ЛР3.md
+++ b/ЛР3.md
@@ -8,6 +8,8 @@
 
 **Alias** – A shortcut for a command, allowing long commands to be abbreviated.
 
+**Variable** - A storage unit for values used in Bash.
+
 **External command** – A command stored in a file and executed by the shell.
 
 **Function** – A set of commands that can be executed as a single command.
