--- a/ЛР3.md
+++ b/ЛР3.md
@@ -14,7 +14,7 @@
 
 **Function** – A set of commands that can be executed as a single command.
 
-# Відповіді на контрольні запитання
+# Визначення
 
 **Command interpreter** - is a system software that understands and executes commands that are entered interactively by a human or from an another program. 
 
