--- a/ЛР3.md
+++ b/ЛР3.md
@@ -21,3 +21,5 @@
 **Shell** - An interpreter that processes entered commands and passes them to the operating system for execution.
 
 **Command** - are predefined text-based directives for users to convey instructions that trigger the execution of a desired action by the application
+
+# Відповіді на запитання
