--- a/ЛР3.md
+++ b/ЛР3.md
@@ -23,16 +23,43 @@
 **Command** - are predefined text-based directives for users to convey instructions that trigger the execution of a desired action by the application
 
 # Відповіді на запитання
-**1. What basic information does the prompt string provide?**
 
-The prompt string in a terminal provides essential information such as the current user, the hostname of the machine, and the current working directory. It often ends with a symbol (like `$` or `#`) indicating whether the user is a regular user or the superuser (root).
+**1. Яку базову інформацію надає рядок запрошення prompt?**
 
-**2. Why do commands need parameters and arguments?**
+The prompt string shows the current user, hostname, and working directory, e.g., `user@hostname:~$`.
 
-Commands need parameters and arguments to specify additional information or options that modify their behavior. Parameters are typically options (like `-l` or `--help`) that change how the command operates, while arguments are the inputs or targets the command acts upon (like filenames or directories).
+**2. Для чого команді потрібні параметри та аргументи?**
 
-**3. What is the purpose of the `ls` command, what parameters and arguments can it have? Provide 3 examples.**
+Parameters modify command behavior, while arguments specify what the command acts upon (e.g., files or directories).
 
+**3. Яке призначення команди `ls`, які параметри та аргументи вона може мати? Наведіть 3 приклади.**
+
+The `ls` command lists directory contents. Examples:  
+1. `ls -l` – detailed list.  
+2. `ls -a` – includes hidden files.  
+3. `ls -lh` – human-readable file sizes.
+
+**4. Яким чином можна використати історію команд, які переваги це надає?**
+
+Use the `history` command or arrow keys to reuse past commands, saving time and reducing errors.
+
+**5. Яке призначення команди `echo`?**
+
+The `echo` command prints text or variable values to the terminal.
+
+**6. Охарактеризуйте поняття змінної в оболонці Bash, які типи змінних вона підтримує?**
+
+A variable in Bash stores data like strings or numbers. Types include local, environment, and special variables (e.g., `$HOME`).
+
+**7. Яке призначення команд `env`, `export` та `unset`?**
+
+- `env` – shows or modifies environment variables.  
+- `export` – makes a variable available to child processes.  
+- `unset` – removes a variable.
+
+**8. Які команди для отримання довідки по командам в терміналі ви знаєте?**
+
+Use `man` for manuals, `--help` for quick help, or `info` for detailed documentation.
 The `ls` command is used to list files and directories in the current working directory. It can take various parameters and arguments:
 
 - **Parameters:**
