--- a/ЛР3.md
+++ b/ЛР3.md
@@ -60,3 +60,56 @@ A variable in Bash stores data like strings or numbers. Types include local, env
 **8. Які команди для отримання довідки по командам в терміналі ви знаєте?**
 
 Use `man` for manuals, `--help` for quick help, or `info` for detailed documentation.
+
+
+## Таблиця команд та їх опис
+
+| Назва команди | Її призначення |
+| --- | --- |
+| ls | Виводить інформацію про каталоги та файли. За замовчуванням без аргументів відображає інформацію для поточного каталогу |
+| ls -l | Використання параметра -l у команді ls дозволяє відобразити інформацію про файли, розташовані в поточному робочому каталозі, у довгому форматі |
+| ls -l /tmp | Використання аргументу /tmp в поєднанні з параметром -l у команді ls дозволяє відобразити детальну інформацію про файли в каталозі /tmp |
+| ls -r | Завдяки параметру -r виводить інформацію про каталоги та файли у зворотному порядку |
+| ls -l -r або ls -lr | Виконує ту ж функцію, що й ls -l, але виводить інформацію у зворотному порядку |
+| ls -l -h | Відображає інформацію про файли та каталоги в розширеному форматі з переводом байтів у більш зрозумілі для людини значення (кб, Мб, Гб тощо) |
+| history | Відображає пронумеровану історію команд |
+| history (№) | Відображає кількість останніх команд за заданим номером |
+| !(№ команди) | Дозволяє виконати команду з історії за її номером |
+| !-n | Виконує n-ну за рахунком команду з кінця |
+| !! | Виконує останню введену команду |
+| ! (команда) | Виконує найчастіше використовуваний вид певної команди |
+| pwd | Відображає поточний робочий каталог |
+| cd (каталог) | Переміщує у вказаний каталог |
+| mkdir (назва) | Створює новий каталог |
+| rmdir (назва) | Видаляє порожній каталог |
+| rm -r (каталог) | Видаляє каталог разом із вмістом |
+| (назва змінної)='(значення)' | Створює нову змінну або редагує існуючу, задаючи їй певне значення |
+| echo $(наз. змін.) | Відображає значення змінної |
+| env | Виводить список усіх змінних та значення лише глобальних змінних |
+| export (змінна) | Перетворює локальну змінну в глобальну |
+| unset (змінна) | Видаляє змінну |
+| alias | Показує всі "псевдоніми" для команд, що задані в оболонці |
+| alias (псевд.)="(команда)" | Створює "псевдонім" для даної команди |
+| unalias (псевд.) | Видаляє псевдонім команди |
+| type (команда) | Визначає тип команди |
+| which (команда) | Показує весь шлях до заданої команди |
+| whereis (команда) | Виконує пошук команд чи файлів та виводить шлях, за яким їх можна знайти |
+| locate (файл) | Виконує пошук файлів у базі даних |
+| updatedb | Виконує оновлення бази даних для команди locate |
+| find (каталог) -name "(шаблон)" | Пошук файлів за назвою у вказаному каталозі |
+| grep "(текст)" (файл) | Шукає текст у файлі |
+| ps aux | Відображає список запущених процесів |
+| kill (PID) | Завершує процес із вказаним ID |
+| pkill (ім'я) | Завершує всі процеси із вказаним іменем |
+| top | Відображає список активних процесів у реальному часі |
+| htop | Альтернативний зручніший перегляд процесів (потрібно встановити) |
+| df -h | Відображає інформацію про використання дискового простору |
+| du -sh (каталог) | Показує розмір вказаного каталогу |
+| free -h | Відображає інформацію про використання оперативної пам’яті |
+| date | Виводить сьогоднішню дату та поточний час |
+| man (команда) | Показує довідкову інформацію про команду |
+| whatis (команда) | Виконує те, що й man -f |
+| apropos (ключ. слово) | Шукає команди за ключовими словами |
+| info (команда) | Показує документацію щодо заданої команди |
+| (команда) --help | Дозволяє швидко ознайомитися з принципом та метою використання команди |
+
