--- a/ЛР3.md
+++ b/ЛР3.md
@@ -113,3 +113,18 @@ Use `man` for manuals, `--help` for quick help, or `info` for detailed documenta
 | info (команда) | Показує документацію щодо заданої команди |
 | (команда) --help | Дозволяє швидко ознайомитися з принципом та метою використання команди |
 
+# Відповіді на контрольні запитання
+## 1. Які типи команд існують в оболонці Bash?
+ **Simple Commands**  
+   Standalone commands that can be run with parameters and variables.  
+   *Example:* `ls` with parameters like `-l` or directories as arguments.
+ **Pipes**  
+   Link the output of one command as input to another.  
+   *Example:* `ls | grep .txt` lists files and filters `.txt` files.
+ **Lists**  
+   Run multiple commands in sequence.  
+   *Example:* `command1; command2` runs `command1` followed by `command2`.
+ **Compound Commands**  
+   Used for scripting, including loops and conditionals.  
+   - **Loops:** Repeat commands (e.g., `for`, `while`).  
+   - **Conditionals:** Run commands based on conditions (e.g., `if`, `case`).
