--- a/ЛР3.md
+++ b/ЛР3.md
@@ -67,51 +67,42 @@ Use `man` for manuals, `--help` for quick help, or `info` for detailed documenta
 | Назва команди | Її призначення |
 | --- | --- |
 | ls | Виводить інформацію про каталоги та файли. За замовчуванням без аргументів відображає інформацію для поточного каталогу |
-| ls -l | Використання параметра -l у команді ls дозволяє відобразити інформацію про файли, розташовані в поточному робочому каталозі, у довгому форматі |
-| ls -l /tmp | Використання аргументу /tmp в поєднанні з параметром -l у команді ls дозволяє відобразити детальну інформацію про файли в каталозі /tmp |
-| ls -r | Завдяки параметру -r виводить інформацію про каталоги та файли у зворотному порядку |
-| ls -l -r або ls -lr | Виконує ту ж функцію, що й ls -l, але виводить інформацію у зворотному порядку |
-| ls -l -h | Відображає інформацію про файли та каталоги в розширеному форматі з переводом байтів у більш зрозумілі для людини значення (кб, Мб, Гб тощо) |
-| history | Відображає пронумеровану історію команд |
-| history (№) | Відображає кількість останніх команд за заданим номером |
-| !(№ команди) | Дозволяє виконати команду з історії за її номером |
-| !-n | Виконує n-ну за рахунком команду з кінця |
-| !! | Виконує останню введену команду |
+| ls -l | Відображає інформацію про файли у довгому форматі з додатковими деталями |
+| ls -l /tmp | Відображає детальну інформацію про файли в каталозі /tmp |
+| ls -r | Виводить інформацію про каталоги та файли у зворотному порядку |
+| ls -l -r або ls -lr | Виконує ту ж функцію, що й ls -l, але виводить інформацію в зворотньому порядку |
+| ls -l -h | Відображає інформацію про файли та каталоги в розширеному форматі з переводом байтів у більш зрозумілі для людини значення (кб, Мб, Гб і т.д.) |
+| history | Відображає пронумеровану історію команд, де під №1 - найдавніше написана, а під останнім номером - остання написана команда |
+| history (№) | Відображає кількість останніх команд за заданим номером, включаючи команду history |
+| !(№ команди) | Дозволяє виконати команду з історії за її номером в ній |
+| !-n | Виконує n-ну за рахунком команду з кінця, де n - порядковий номер команди з кінця в історії |
+| !! | Виконує команду, що найчастіше використовувалась |
 | ! (команда) | Виконує найчастіше використовуваний вид певної команди |
-| pwd | Відображає поточний робочий каталог |
-| cd (каталог) | Переміщує у вказаний каталог |
-| mkdir (назва) | Створює новий каталог |
-| rmdir (назва) | Видаляє порожній каталог |
-| rm -r (каталог) | Видаляє каталог разом із вмістом |
-| (назва змінної)='(значення)' | Створює нову змінну або редагує існуючу, задаючи їй певне значення |
-| echo $(наз. змін.) | Відображає значення змінної |
-| env | Виводить список усіх змінних та значення лише глобальних змінних |
+| (назва змінної)='(значення)' | Створює нову змінну або редагує існуючу, задаючи їй певне значення (можна і не числове) |
+| echo $(наз. змін.) | Відображає значення змінної. Може відображати як і локальну, так і глобальну змінну |
+| env | Виводить список всіх змінних та значення лише глобальних змінних |
 | export (змінна) | Перетворює локальну змінну в глобальну |
+| export (ком. створ. змін.) | Створює змінну одразу як глобальну |
 | unset (змінна) | Видаляє змінну |
-| alias | Показує всі "псевдоніми" для команд, що задані в оболонці |
-| alias (псевд.)="(команда)" | Створює "псевдонім" для даної команди |
-| unalias (псевд.) | Видаляє псевдонім команди |
-| type (команда) | Визначає тип команди |
+| type (команда) | Визначає тип команди та виводить шлях до заданої команди |
 | which (команда) | Показує весь шлях до заданої команди |
-| whereis (команда) | Виконує пошук команд чи файлів та виводить шлях, за яким їх можна знайти |
-| locate (файл) | Виконує пошук файлів у базі даних |
-| updatedb | Виконує оновлення бази даних для команди locate |
-| find (каталог) -name "(шаблон)" | Пошук файлів за назвою у вказаному каталозі |
-| grep "(текст)" (файл) | Шукає текст у файлі |
-| ps aux | Відображає список запущених процесів |
-| kill (PID) | Завершує процес із вказаним ID |
-| pkill (ім'я) | Завершує всі процеси із вказаним іменем |
-| top | Відображає список активних процесів у реальному часі |
-| htop | Альтернативний зручніший перегляд процесів (потрібно встановити) |
-| df -h | Відображає інформацію про використання дискового простору |
-| du -sh (каталог) | Показує розмір вказаного каталогу |
-| free -h | Відображає інформацію про використання оперативної пам’яті |
+| type -a (команда) | Показує тип команди та шлях до неї |
+| alias | Показує всі "псевдоніми" для команд, що задані в оболонці |
+| alias (псевд.)="(команда)" | Створює "псевдонім" для даної команди, який може використовуватись як задана команда |
 | date | Виводить сьогоднішню дату та поточний час |
-| man (команда) | Показує довідкову інформацію про команду |
-| whatis (команда) | Виконує те, що й man -f |
-| apropos (ключ. слово) | Шукає команди за ключовими словами |
-| info (команда) | Показує документацію щодо заданої команди |
-| (команда) --help | Дозволяє швидко ознайомитися з принципом та метою використання команди |
+| man (команда) | Показує ім'я команди, описує призначення, як вона виконується, показує всі її опції, список пов'язаних файлів, автора та іншу інформацію |
+| man -f | Шукає посібники за назвою |
+| man -k (ключ. слово) | Шукає збіги за ключовим словом в усіх посібниках |
+| whatis | Виконує те ж, що й man -f |
+| whereis | Шукає команди чи файли та виводить шлях, за яким їх можна знайти |
+| locate | Шукає команди чи файли в базі даних з моменту її створення |
+| locate -c | Показує кількість збігів при пошуку |
+| locate -b | Шукає лише в іменах файлів чи команд |
+| passwd | Змінює пароль |
+| updatedb | Оновлює базу даних |
+| info | Показує документацію щодо заданої команди |
+| (команда) --help | Дозволяє швидко ознайомитися з принципом та метою використання |
+
 
 # Відповіді на контрольні запитання
 ## 1. Які типи команд існують в оболонці Bash?
