--- a/ЛР3.md
+++ b/ЛР3.md
@@ -123,3 +123,22 @@ Use `man` for manuals, `--help` for quick help, or `info` for detailed documenta
    Used for scripting, including loops and conditionals.  
    - **Loops:** Repeat commands (e.g., `for`, `while`).  
    - **Conditionals:** Run commands based on conditions (e.g., `if`, `case`).
+   - 
+## 2. Що таке змінні оточення? Які вони бувають. Як їх можна переглянути в терміналі?
+
+Environment variables are dynamic named values that influence the behavior of processes during their execution. Key properties include:
+
+1. **Named**  
+   Have descriptive names, such as `APP_MODE` or `DB_URL`.
+
+2. **External**  
+   Values are set outside the program code via files, command lines, or system settings.
+
+3. **Dynamic**  
+   Can be updated without restarting programs.
+
+4. **Configurable**  
+   Code relies on these variables but does not define them.
+
+5. **Separated**  
+   No need to change code configurations after setting the variables.
