--- a/ЛР3.md
+++ b/ЛР3.md
@@ -142,3 +142,7 @@ Environment variables are dynamic named values that influence the behavior of pr
 
 5. **Separated**  
    No need to change code configurations after setting the variables.
+
+## 3. Опишіть змінну $PS1. Як в терміналі переглянути її вміст?
+
+Defines the terminal's primary prompt, showing details like user, hostname, and directory. Use `echo $PS1` to view its content.
