--- a/ЛР3.md
+++ b/ЛР3.md
@@ -146,3 +146,5 @@ Environment variables are dynamic named values that influence the behavior of pr
 ## 3. Опишіть змінну $PS1. Як в терміналі переглянути її вміст?
 
 Defines the terminal's primary prompt, showing details like user, hostname, and directory. Use `echo $PS1` to view its content.
+
+![Animated Space Palm Tree](https://github.com/Huaweitututu/Operating-systems-BIKS-23/blob/main/3742be4a-c3b2-4e05-93f3-681e2471c17d.png)
