--- a/ЛР3.md
+++ b/ЛР3.md
@@ -62,7 +62,8 @@ A variable in Bash stores data like strings or numbers. Types include local, env
 Use `man` for manuals, `--help` for quick help, or `info` for detailed documentation.
 
 
-## Таблиця команд та їх опис
+# Хід роботи 
+## 1 Таблиця
 
 | Назва команди | Її призначення |
 | --- | --- |
@@ -102,6 +103,9 @@ Use `man` for manuals, `--help` for quick help, or `info` for detailed documenta
 | updatedb | Оновлює базу даних |
 | info | Показує документацію щодо заданої команди |
 | (команда) --help | Дозволяє швидко ознайомитися з принципом та метою використання |
+
+# 2
+![](https://github.com/Huaweitututu/Operating-systems-BIKS-23/blob/main/var.png)
 
 
 # Відповіді на контрольні запитання
@@ -147,4 +151,4 @@ Environment variables are dynamic named values that influence the behavior of pr
 
 Defines the terminal's primary prompt, showing details like user, hostname, and directory. Use `echo $PS1` to view its content.
 
-![](https://github.com/Huaweitututu/Operating-systems-BIKS-23/blob/main/var.png)
+
