--- a/ЛР3.md
+++ b/ЛР3.md
@@ -63,7 +63,7 @@ Use `man` for manuals, `--help` for quick help, or `info` for detailed documenta
 
 
 # Хід роботи 
-## 1 Таблиця
+## Таблиця
 
 | Назва команди | Її призначення |
 | --- | --- |
@@ -104,7 +104,7 @@ Use `man` for manuals, `--help` for quick help, or `info` for detailed documenta
 | info | Показує документацію щодо заданої команди |
 | (команда) --help | Дозволяє швидко ознайомитися з принципом та метою використання |
 
-# 2
+# 
 ![](https://github.com/Huaweitututu/Operating-systems-BIKS-23/blob/main/var.png)
 
 
