--- a/ЛР3.md
+++ b/ЛР3.md
@@ -152,7 +152,7 @@ Environment variables are dynamic named values that influence the behavior of pr
 
 Defines the terminal's primary prompt, showing details like user, hostname, and directory. Use `echo $PS1` to view its content.
 
-## 4.
+## 4. Як можна змінити значення змінної $PS1? Що при цьому відбудеться в рядку запрошенні в bash (рядок запрошення перед початком кожної команди). Як змінити значення цієї змінної не на поточний сеанс, а за замовчуванням?
 
 1. **Changing the Value**
    
