--- a/ЛР3.md
+++ b/ЛР3.md
@@ -129,7 +129,7 @@ Use `man` for manuals, `--help` for quick help, or `info` for detailed documenta
    - **Loops:** Repeat commands (e.g., `for`, `while`).  
    - **Conditionals:** Run commands based on conditions (e.g., `if`, `case`).
 
-# 2. Що таке змінні оточення? Які вони бувають. Як їх можна переглянути в терміналі?
+## 2. Що таке змінні оточення? Які вони бувають. Як їх можна переглянути в терміналі?
 
 Environment variables are dynamic named values that influence the behavior of processes during their execution. Key properties include:
 
@@ -148,11 +148,11 @@ Environment variables are dynamic named values that influence the behavior of pr
 5. **Separated**  
    No need to change code configurations after setting the variables.
 
-# 3. Опишіть змінну $PS1. Як в терміналі переглянути її вміст?
+## 3. Опишіть змінну $PS1. Як в терміналі переглянути її вміст?
 
 Defines the terminal's primary prompt, showing details like user, hostname, and directory. Use `echo $PS1` to view its content.
 
-# 4. Як можна змінити значення змінної $PS1? Що при цьому відбудеться в рядку запрошенні в bash (рядок запрошення перед початком кожної команди). Як змінити значення цієї змінної не на поточний сеанс, а за замовчуванням?
+## 4. Як можна змінити значення змінної $PS1? Що при цьому відбудеться в рядку запрошенні в bash (рядок запрошення перед початком кожної команди). Як змінити значення цієї змінної не на поточний сеанс, а за замовчуванням?
 
 1. **Changing the Value**
    
