--- a/ЛР3.md
+++ b/ЛР3.md
@@ -190,6 +190,45 @@ Then, reload the file to apply the changes:
 
 ***source ~/.bashrc**
 
+## 5. Для чого використовують лапки в оболонці Bash? .  
 
+1. **Single Quotes (`'`)**:  
+   Preserve the literal value of all characters inside (no variable expansion).  
+
+2. **Double Quotes (`"`)**:  
+   Allow variable expansion (`$VAR`) and command substitution (`$(command)`).  
+
+3. **Backticks (`` ` ``)**:  
+   Used for command substitution (deprecated, prefer `$(command)`).  
+
+---
+
+## 6. Для чого використовують інструкції керування, які їх види Ви знаєте?
+
+Control instructions manage script flow. Types include:  
+- **Conditionals**: `if`, `case`.  
+- **Loops**: `for`, `while`, `until`.  
+- **Branching**: `break`, `continue`, `return`.  
+
+---
+
+## 7. В чому різниця якщо в кінці рядку запрошення bash стоїть символ $ чи #? Наприклад на екрані ми бачимо наступні записи
+
+- **`$`**: Indicates a regular user.  
+- **`#`**: Indicates the superuser (root).  
+
+## 8. Яке призначення команд whereis та locate? Яка між ними відмінність?
+1. **`whereis`**:  
+   Finds the binary, source, and manual page files for a command.  
+
+2. **`locate`**:  
+   Searches for files and directories in a pre-built database.  
+
+---
+
+### Difference Between `whereis` and `locate`
+
+- **`whereis`**: Focuses on finding binaries, sources, and manuals for commands.  
+- **`locate`**: Searches the entire filesystem for files/directories based on a database.  
 
 
