--- a/ЛР3.md
+++ b/ЛР3.md
@@ -231,4 +231,10 @@ Control instructions manage script flow. Types include:
 - **`whereis`**: Focuses on finding binaries, sources, and manuals for commands.  
 - **`locate`**: Searches the entire filesystem for files/directories based on a database.  
 
+### Висновок
 
+Командний рядок Bash є потужним інструментом для автоматизації та управління операційною системою через текстові команди. Використання змінних, інструкцій керування та спеціальних символів дозволяє гнучко налаштовувати середовище та оптимізувати роботу.  
+
+Команди для пошуку файлів (`whereis`, `locate`) та отримання довідки (`man`, `--help`) значно спрощують роботу з системою. Налаштування рядка запрошення (`$PS1`) та розуміння ролі змінних середовища є ключовими для ефективного використання Bash.  
+
+Розуміння різниці між звичайним користувачем (`$`) та суперкористувачем (`#`) допомагає уникнути помилок під час виконання команд. Bash надає широкі можливості для створення скриптів, що робить його незамінним інструментом для системних адміністраторів та розробників.  
