--- a/ЛР3.md
+++ b/ЛР3.md
@@ -231,7 +231,7 @@ Control instructions manage script flow. Types include:
 - **`whereis`**: Focuses on finding binaries, sources, and manuals for commands.  
 - **`locate`**: Searches the entire filesystem for files/directories based on a database.  
 
-### Висновок
+# Висновок
 
 Командний рядок Bash є потужним інструментом для автоматизації та управління операційною системою через текстові команди. Використання змінних, інструкцій керування та спеціальних символів дозволяє гнучко налаштовувати середовище та оптимізувати роботу.  
 
