--- a/ЛР3.md
+++ b/ЛР3.md
@@ -1,4 +1,4 @@
-# Словник
+# Словник (Станіслав Рубель)
 
 **Command Line Interface (CLI)** - An interface that allows users to interact with the operating system through text commands.
 
@@ -63,7 +63,7 @@ Use `man` for manuals, `--help` for quick help, or `info` for detailed documenta
 
 
 # Хід роботи 
-## Таблиця
+## Таблиця (Назар Видиборець)
 
 | Назва команди | Її призначення |
 | --- | --- |
@@ -109,7 +109,7 @@ Use `man` for manuals, `--help` for quick help, or `info` for detailed documenta
 #
 
 
-# Відповіді на контрольні запитання
+# Відповіді на контрольні запитання (Святослав Чернуцький)
 ## 1. Які типи команд існують в оболонці Bash?
 
  **Simple Commands**  
