--- a/ЛР3.md
+++ b/ЛР3.md
@@ -62,8 +62,8 @@ A variable in Bash stores data like strings or numbers. Types include local, env
 Use `man` for manuals, `--help` for quick help, or `info` for detailed documentation.
 
 
-# Хід роботи 
-## Таблиця (Назар Видиборець)
+# Хід роботи (Назар Видиборець)
+## Таблиця 
 
 | Назва команди | Її призначення |
 | --- | --- |
