--- a/ЛР4.md
+++ b/ЛР4.md
@@ -1,1 +1,13 @@
+# Завдання для попередньої підготовки 
 
+## Словник термінів
+
+**Argument** - Additional information provided to a command for processing.
+
+**Option (parameter)** - A modifier that changes the behavior of a command.
+
+**Prompt** - The command-line prompt that displays user, system, and current directory information.
+
+**Alias** - A shortcut or nickname for a command.
+
+**Variable** - A storage unit for values used in Bash.
