--- a/ЛР4.md
+++ b/ЛР4.md
@@ -1,13 +1,38 @@
 # Завдання для попередньої підготовки 
 
-## Словник термінів
+## Основні терміни та їх переклад
 
-**Argument** - Additional information provided to a command for processing.
+- Process (процес) – програма, що виконується в операційній системі.
+- PID (Process ID, ідентифікатор процесу) – унікальний номер процесу в системі.
+- Parent Process (батьківський процес) – процес, який створив інший процес.
+- Child Process (дочірній процес) – процес, створений іншим процесом.
+- Zombie Process (зомбі-процес) – процес, що завершив роботу, але не був видалений із таблиці процесів.
+- Daemon (демон) – фоновий процес, що працює без взаємодії з користувачем.
+- Foreground process (процес у передньому плані) – процес, який працює у поточному терміналі.
+- Background process (процес у фоні) – процес, що працює у фоновому режимі.
+- CPU usage (використання процесора) – частка ресурсів процесора, що використовується процесом.
+- Memory usage (використання пам’яті) – обсяг оперативної пам’яті, зайнятий процесом.
 
-**Option (parameter)** - A modifier that changes the behavior of a command.
+## Команди та їх призначення
 
-**Prompt** - The command-line prompt that displays user, system, and current directory information.
+- ps – виводить список поточних процесів.
+- top – відображає список процесів у реальному часі.
+- kill – завершує процес за його PID.
+- killall – завершує всі процеси за іменем.
 
-**Alias** - A shortcut or nickname for a command.
+## Основні параметри команди ps
 
-**Variable** - A storage unit for values used in Bash.
+- -A / -e – показує всі процеси.
+- -f – виводить розширену інформацію про процеси.
+- -l – відображає довгий список процесів із додатковими колонками.
+- -u user – показує процеси конкретного користувача.
+- -p pid – відображає інформацію про конкретний процес.
+
+## Основні параметри команди top
+
+- %CPU – відображає частку часу процесора, зайнятого процесом.
+- %MEM – показує відсоток використання пам’яті процесом.
+- PR – пріоритет процесу.
+- NI – "nice" значення, що впливає на пріоритет процесу.
+- VIRT – загальний обсяг віртуальної пам’яті, що використовується процесом.
+- RES – обсяг фізичної пам’яті, що використовується процесом.
