--- a/ЛР4.md
+++ b/ЛР4.md
@@ -36,3 +36,48 @@
 - NI – "nice" значення, що впливає на пріоритет процесу.
 - VIRT – загальний обсяг віртуальної пам’яті, що використовується процесом.
 - RES – обсяг фізичної пам’яті, що використовується процесом.
+
+# Відповіді на наступні питання
+## 2.1. Які команди для моніторингу стану процесів ви знаєте? Як переглянути їх можливі параметри?
+
+Для моніторингу процесів у Linux використовують такі команди:
+
+- ps – виводить список процесів, які виконуються у системі.
+- top – відображає інформацію про процеси в реальному часі.
+- htop – покращена версія top із кольоровим інтерфейсом (не завжди встановлена за замовчуванням).
+
+Щоб переглянути можливі параметри команд, можна скористатися:
+
+- man ps, man top – відкриває документацію до команди.
+- ps --help, top --help – короткий довідник по параметрах.
+
+## 2.2. Чи може команда ps у реальному часі відслідковувати стан процесів?
+
+Ні, команда ps не відслідковує процеси в реальному часі. Вона відображає інформацію лише на момент виконання команди.
+Для моніторингу в реальному часі потрібно використовувати top або htop.
+
+## 2.3. За якими параметрами можливе сортування процесів у команді top? Як переключатись між ними?
+
+Команда top дозволяє сортувати процеси за різними параметрами, зокрема:
+
+- %CPU – використання процесора.
+- %MEM – використання оперативної пам’яті.
+- PID – ідентифікатор процесу.
+- PR – пріоритет процесу.
+- NI – nice-значення (впливає на пріоритет).
+- VIRT – використання віртуальної пам’яті.
+- RES – використання фізичної пам’яті.
+
+Переключатися між параметрами сортування можна за допомогою клавіші f, а потім вибрати потрібне поле. Також можна натискати:
+
+- P – сортувати за CPU.
+- M – сортувати за пам’яттю.
+- N – сортувати за PID.
+
+## 2.4. Які команди для завершення роботи процесів ви знаєте?
+
+- kill PID – завершує процес за його PID (ідентифікатором).
+- kill -9 PID – примусово завершує процес (-9 – сигнал KILL).
+- killall ім’я_процесу – завершує всі процеси з вказаним іменем.
+- pkill ім’я_процесу – завершує процеси за ім’ям або частковим збігом.
+- htop – у ньому можна завершити процеси вручну за допомогою клавіш (наприклад, F9 для завершення).
