--- a/ЛР4.md
+++ b/ЛР4.md
@@ -37,7 +37,8 @@
 - VIRT – загальний обсяг віртуальної пам’яті, що використовується процесом.
 - RES – обсяг фізичної пам’яті, що використовується процесом.
 
-# Відповіді на наступні питання
+# Відповіді на питання
+
 ## 2.1. Які команди для моніторингу стану процесів ви знаєте? Як переглянути їх можливі параметри?
 
 Для моніторингу процесів у Linux використовують такі команди:
