--- a/ЛР4.md
+++ b/ЛР4.md
@@ -1,3 +1,11 @@
+# Лабораторна робота №4
+
+## Тема: "Команди Linux для управління процесами" 
+
+## Мета: 
+Ознайомлення з основними командами для моніторингу процесів у Linux, вивчення їхніх параметрів та можливостей.
+
+
 # Завдання для попередньої підготовки 
 
 ## Основні терміни та їх переклад
