--- a/ЛР4.md
+++ b/ЛР4.md
@@ -90,3 +90,46 @@
 - killall ім’я_процесу – завершує всі процеси з вказаним іменем.
 - pkill ім’я_процесу – завершує процеси за ім’ям або частковим збігом.
 - htop – у ньому можна завершити процеси вручну за допомогою клавіш (наприклад, F9 для завершення).
+
+# Контрольні запитання
+
+## 1. The `/proc` Directory
+The `/proc` directory is similar to the `/dev` directory because it does not contain regular files, but special files that provide information about running processes and the state of the kernel.
+
+## 2. Dynamically Determining Memory Usage
+To dynamically determine which of the three processes is using the most memory and to find out what percentage of the total memory it is consuming, you can use system utilities or write a script to collect this information. For Linux (using the `ps` command):
+
+You can use the `ps` command to get information about memory usage by processes.
+
+## 3. Process Hierarchy in Linux
+The process hierarchy in Linux has the following structure:
+
+- **PID 1 (init or systemd)**: This is the root process that is started by the kernel during system boot. It is responsible for initializing the system and starting all other processes.
+- **Child Processes**: Each process can spawn child processes. For example, `systemd` starts services, which in turn can start other processes.
+- **Process Tree**: All processes form a tree, where each process (except PID 1) has a parent process.
+
+## 4. Process Monitoring Commands
+- **`ps`**: View active processes.
+- **`top`**: Real-time interface for monitoring resources.
+
+## 5. `htop` vs `top`
+Unlike `top`, `htop` shows all processes in the system. It also displays uptime, CPU, and memory usage.
+
+## 6. Android Process Management
+Android is based on the Linux kernel, so it inherits its mechanisms for process management:
+
+- **Processes and Threads**: Each Android application runs in its own process with a unique PID.
+- **cgroups (control groups)**: Used to limit resources (CPU, memory) for individual processes or groups of processes.
+- **OOM Killer (Out-Of-Memory Killer)**: Automatically terminates processes if the system runs out of available memory.
+
+## 7. Terminal Control on Android
+Yes, Android supports terminal control of processes via ADB (Android Debug Bridge) or the built-in terminal on devices with root access. Alternatively, third-party terminals like Termux can be used.
+
+## 8. Third-Party Apps for Process Management on Android
+On Android, you can install third-party apps for managing and monitoring processes. Here are the main ones:
+
+- **Greenify**: "Freezes" background processes to save battery.
+- **SystemPanel 2**: Monitors CPU, memory, and terminates processes.
+- **CPU Monitor**: Tracks CPU usage.
+- **Termux**: Terminal for managing processes via Linux commands.
+- **BetterBatteryStats**: Analyzes battery consumption.
