--- a/ЛР4.md
+++ b/ЛР4.md
@@ -133,3 +133,11 @@ On Android, you can install third-party apps for managing and monitoring process
 - **CPU Monitor**: Tracks CPU usage.
 - **Termux**: Terminal for managing processes via Linux commands.
 - **BetterBatteryStats**: Analyzes battery consumption.
+
+# Висновок
+
+Лабораторна робота №4 дозволяє глибше зрозуміти механізми управління процесами в Linux. Основні команди, такі як `ps`, `top`, `kill` та `killall`, є ключовими інструментами для моніторингу, аналізу та завершення процесів. Команда `ps` надає знімок активних процесів на момент її виконання, тоді як `top` забезпечує динамічний огляд системних ресурсів у реальному часі, дозволяючи сортувати процеси за різними параметрами (CPU, пам’ять тощо). Для завершення процесів використовуються команди `kill` (за PID), `killall` (за іменем) та `pkill`, що дозволяє гнучко керувати системою.
+
+Окрему увагу приділено роботі з процесами в Android, який, будучи заснованим на Linux, успадковує його механізми управління процесами, такі як cgroups та OOM Killer. Для моніторингу та управління процесами на Android можна використовувати як вбудовані інструменти (ADB), так і сторонні додатки, наприклад, Termux або Greenify. Це підкреслює універсальність Linux-інструментів та їх застосування у різних середовищах, від серверів до мобільних пристроїв.
+
+Підсумовуючи, робота з процесами в Linux вимагає розуміння їх ієрархії, механізмів управління ресурсами та використання відповідних команд для ефективного моніторингу та оптимізації роботи системи.
